# prometheus-splitwise-exporter

./: .gitignore  Dockerfile  MANIFEST  Makefile  README.rst  config.json.example  disperse.conf  grafana-dashboard.json  prometheus-splitwise-exporter.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: container.yml
