[metadata]
name = prometheus-splitwise-exporter
version = 0.10
maintainer = Jelmer Vernooij
maintainer_email = jelmer@jelmer.uk
url = https://github.com/jelmer/prometheus-splitwise-exporter
license = Apachev2
project_urls =
    Repository=https://github.com/jelmer/prometheus-splitwise-exporter

[options]
scripts = prometheus-splitwise-exporter.py
install_requires =
    splitwise
    prometheus-client
